# PALM-Capstone

./: .gitignore  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
documents/: requirements.md
documents/project-requirements/: 2025-10-26-80-Requirements.md  questions.md  requirements.md
documents/project-requirements/individual-requirements/: andrew.md  justice.md  luke.md
documents/team-charter-and-working-agreement/: 2025-11-02-80-TeamCharter.md
elephant/scripts/elephant_mpeg/: setup.bash
elephant/src/elephant_mpeg/: CMakeLists.txt  package.xml
elephant/src/elephant_mpeg/include/elephant_mpeg/: commands.bash  dependencies.bash
elephant/src/elephant_mpeg/src/: camera_gstreamer_node.cpp  gst_camera_node.cpp  image_saver_node.cpp  mpeg_recorder.cpp  opencv_camera_node.cpp  velocity.cpp
palm-project/: README.md
palm-project/documents/: contributing.md
palm-project/documents/project-requirements/: questions.md
palm-project/documents/project-requirements/individual-requirements/: andrew.md
palm-project/documents/team-charter-and-working-agreement/: 2025-11-02-80-TeamCharter.md
palm-project/scripts/: install-ros2-packages.bash
palm-project/scripts/install-and-init/: install-ros2-packages.bash  update-lidar-opencr-board.bash
palm-project/scripts/start-turtlebot3/camera/: view-intel-realsense-camera
palm-project/scripts/start-turtlebot3/control/: start-local-turtlebot-controller.bash
palm-project/scripts/turtlebot3-urdf/: restore_backup.bash
palm-project/scripts/visualize/: config.rviz  run_rviz.bash
reCamera/: lerobot_logger_http_camera.py  listen.py  predictions.csv  readme.md
reCamera/flows/: flow.json  flows_old.json
ros/: README.md  vis_SLAM_guide.txt
ros/install-ros-humble-hawksbill/: README.md  install-ros2-humble.bash  install-ros2-packages.bash
ros/ros-code/: README.md
ros/ros-code/agv-ros/scripts/: start_agv.bash
ros/ros-code/agv-ros/scripts/VNC/: README.md  run_vnc.bash
ros/ros-code/agv-ros/scripts/camera/: move.sh  no_ros_run_camera.bash  ros_run_camera.sh
ros/ros-code/agv-ros/scripts/camera/agv/: stream.sh
ros/ros-code/agv-ros/scripts/camera/realsense/: run.sh
ros/ros-code/agv-ros/scripts/control/: move.sh
ros/ros-code/agv-ros/scripts/control/bluetooth/: agv_joy.launch.py  run.sh
ros/ros-code/agv-ros/scripts/control/bluetooth-improved/: bluetooth_config.yaml  joystick_test.py  revopilot_udp_highfreq_gamepad_cmds_adi_new.py  run.sh
ros/ros-code/agv-ros/scripts/gps/: move.sh  run.sh
ros/ros-code/agv-ros/scripts/lerobot/: README.md  move.sh  parser_example.py  run_lerobotlogger.sh
ros/ros-code/agv-ros/scripts/mapping/: README.md  save_map.bash  start_gmapper.bash  start_localizer.bash
ros/ros-code/agv-ros/scripts/mapping/map_server/: README.md  activate_map_server.bash  configure_map_server.bash  start_map_server.bash
ros/ros-code/agv-ros/scripts/params/: README.md
ros/ros-code/agv-ros/src/: README.md
ros/ros-code/agv-ros/src/camera_stream/: package.xml  setup.cfg  setup.py
ros/ros-code/agv-ros/src/lerobot_logging/: package.xml  setup.cfg  setup.py
ros/ros-code/agv-ros/src/um982_gps_manual/: CMakeLists.txt  package.xml
ros/ros-code/agv-ros/src/um982_gps_manual/config/: um982_gps_manual_params.yaml
ros/ros-code/agv-ros/src/um982_gps_manual/launch/: um982_gps_manual.launch.py
ros/ros-code/agv-ros/src/um982_gps_manual/msg/: UM982Fix.msg
ros/ros-code/agv-ros/src/um982_gps_manual/um982_gps_manual/: um982_node.py
ros/ros-code/controller-ros/scripts/: README.md  steering.py
ros/ros-code/controller-ros/scripts/VNC/: README.md
ros/ros-code/controller-ros/scripts/gstreamer/: README.md  run_gstreamer_listener.bash
ros/ros-code/controller-ros/scripts/ip-steering/: README.md  steering.py
ros/ros-code/controller-ros/scripts/vnc/: connect_vnc.bash
ros/ros-code/elephant-ros/scan_logger/: CMakeLists.txt  README.md  SETUP_INSTRUCTIONS.md  package.xml  setup.cfg  setup.py
ros/ros-code/elephant-ros/scan_logger/launch/: scan_logger.launch.py
ros/ros-code/elephant-ros/scan_logger/lidar_logger/: scan_logger.py  scan_logger.py.save
ros/ros-code/elephant-ros/scan_logger/scan_logger/: __init__.py  scan_logger.py
ros/ros-code/turtlebot-ros/: README.md
ros/ros-code/turtlebot-ros/scripts/gstreamer/: README.md  run-gstreamer.bash
ros/ros-code/turtlebot-ros/scripts/start-turtlebot3/: start-turtlebot3.bash
ros/ros-code/turtlebot-ros/scripts/turtlebot3-urdf/: README.md  custom.urdf  replace_with_custom.bash
ros/ros-code/turtlebot-ros/scripts/visual-slam/: start-visual-slam.bash
ros/ros-code/turtlebot-ros/src/: README
ros/ros-code/turtlebot-ros/src/azure-upload/: publisher-prototype.py  readme.md
ros/ros-code/turtlebot-ros/src/py_examples/: package.xml
ros/ros-code/turtlebot-ros/src/turtlebot_rtabmap/: CMakeLists.txt  package.xml
ros/ros-code/turtlebot-ros/src/turtlebot_rtabmap/config/: rtabmap_params.yaml
ros/ros-code/turtlebot-ros/src/turtlebot_rtabmap/launch/: rtabmap_turtlebot.launch.py
ros/ros-code/turtlebot-ros/src/turtlebot_rtabmap/rviz/: rtabmap.rviz
ros2_ws/src/: README.txt  setup.bash
ros2_ws/src/vr_camera/: CMakeLists.txt  package.xml
ros2_ws/src/vr_camera/include/: openxr.cpp  openxr_tracker.h  ros2_publisher.h
ros2_ws/src/vr_camera/openxr_connection/: README.txt  openxr.bash  xr_app  xr_camera
ros2_ws/src/vr_camera/scripts/: manado.bash
ros2_ws/src/vr_camera/src/: camera_publisher.cpp  main.cpp  openxr_pose_publisher.cpp  openxr_tracker.cpp  pose_publisher.cpp  pose_subscriber.cpp  ros2_publisher.cpp
src/: README
src/cpp-examples/: CMakeLists.txt  package.xml
src/lib/: styles.ts
src/lib/ui/: contributors.svelte  footer.svelte  header.svelte  main.svelte  palm.svelte  project-contributions.svelte  project-contributors.svelte  project-description.svelte
src/py_examples/: README  setup.py
src/py_examples/py_examples/: some_publisher.py  some_subscriber.py
src/routes/: +page.svelte
src/turtlebot3_teleop_config/: CMakeLists.txt  package.xml
src/turtlebot3_teleop_config/config/: joystick.yaml
(+13 files in other folders)
