<?xml version="1.0"?>
<package format="3">
  <name>gst_camera_pkg</name>
  <version>0.0.1</version>
  <description>GStreamer camera publisher for ROS2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Needed for pkg-config lookup -->
  <build_depend>pkg-config</build_depend>

  <!-- Runtime GStreamer packages -->
  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
